# fcc-claude1

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.claude/: settings.json
docs/: architecture.md  changelog.md  claude-code-setup.md  dependencies.md  deployment.md  development-workflow.md  environment-variables.md  fcc-claude-setup.md  mcp-servers.md  plugins-and-skills.md  project-overview.md  recovery-guide.md  setup.md  troubleshooting.md  vscode-setup.md
