[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "9router-claude-test1"
version = "0.1.0"
description = "Test repository for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "abhinay125-2ndacc", email = "abhinay125-2ndacc@users.noreply.github.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "isort==5.13.2",
  "flake8==7.1.1",
  "pre-commit==4.0.1",
  "pytest==8.2.1",
  "pytest-cov==5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
select = ["E", "F", "W", "C90", "I", "B", "C4"]
ignore = []
exclude = [
  ".git",
  "__pycache__",
  ".eggs",
  "*.egg",
  "build",
  "dist",
  ".venv",
  "venv",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]